[project]
name = "intraday-price-fetch"
version = "0.1.0"
description = "Stock price data fetching, training, and evaluation pipeline"
authors = [{name = "Robert Franklin", email = "robert.franklin@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",
    "h5py>=3.9.0",
    # HTTP/API
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "certifi>=2024.0.0",
    # Environment & Config
    "python-dotenv>=1.0.0",
    # Async
    "nest-asyncio>=1.6.0",
    # Progress bars
    "tqdm>=4.66.0",
    # Technical Analysis
    "ta>=0.11.0",
    # Machine Learning - Core
    "scikit-learn>=1.5.0",
    # Deep Learning - torch with CUDA 12.8 support (requires Python 3.13+)
    "torch>=2.5.0",
    "pytorch-lightning>=2.0.0",
    # Reinforcement Learning
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    # Visualization
    "matplotlib>=3.9.0",
    "mplfinance>=0.12.0",
    "tensorboard>=2.18.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.0",
    "autopep8>=2.3.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.0",
    "autopep8>=2.3.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "training", "eval", "data_fetch"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

