[project]
name = "data-fetch"
version = "0.1.0"
description = "Async intraday price data fetcher for EODHD API"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Async HTTP
    "aiohttp>=3.9.0",
    "aiodns>=3.0.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Environment & Config
    "python-dotenv>=1.0.0",
    # Async utilities
    "nest-asyncio>=1.6.0",
    # Progress bars
    "tqdm>=4.66.0",
    # SSL/TLS
    "certifi>=2024.0.0",
    # HTTP (sync fallback)
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Only needed for convert_to_hdf5.py
hdf5 = [
    "h5py>=3.9.0",
]
# For the datamodule/dataset (PyTorch integration)
torch = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "h5py>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

